--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -1,42 +1,43 @@
-:root {
-    --primary: #6222CC;
-    --secondary: #FBA504;
-    --light: #6222CC;
-    --dark: #04000B;
-    --bg-light: #6222CC;
+@font-face {
+    font-family: "Unbounded";
+    font-style: normal;
 }
+body{
+    background: #F5F4EF;
+}
+.nav-button a{
+    text-decoration: none;
+    color: #F0773E;
+}
+.nav-button a:hover{
+    text-decoration: none;
+    color: #F0773E;
 
-/*.container {*/
-/*    !*max-width: 800px;*!*/
-/*    !*margin: 0 auto;*!*/
-/*    !*text-align: center;*!*/
-/*}*/
-/*.button {*/
-/*    padding: 10px 20px;*/
-/*    font-size: 20px;*/
-/*    color: #fff;*/
-/*    border-radius: 5px;*/
-/*    cursor: pointer;*/
-/*}*/
-/*.primary {*/
-/*    background-color: #00c853;*/
-/*    border: none;*/
-/*}*/
-/*.primary:hover {*/
-/*    background-color: #009624;*/
-/*}*/
-/*.secondary {*/
-/*    background-color: #f44336;*/
-/*    border: none;*/
-/*}*/
-/*.secondary:hover {*/
-/*    background-color: #c62828;*/
-/*}*/
-/*.button-row {*/
-/*    display: flex;*/
-/*    margin-top: 20px;*/
-/*}*/
-
+}
+.logo-dab{
+    height: 50px;
+}
+.nav-button{
+    border-radius: 30px;
+    border: 1.5px solid #F0773E;
+    text-decoration: none;
+    color: #F0773E;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 16px;
+    height: 40px;
+    padding-top: 5px;
+    box-sizing: border-box;
+    margin-left: 10px;
+}
+.static-font{
+    font-family: "Unbounded", sans-serif;
+    text-transform: uppercase;
+}
+.text-category h1{
+    font-size: 44px;
+}
 /*Стиль для свайпа с карточками*/
 .slide-container{
     max-width: 1120px;
@@ -165,9 +166,10 @@
 
 .flipchik {
     margin: 0;
+    width: 95vw;
     /*padding: 20px;*/
     /*min-height: 100vh;*/
-    background-color: #df1f2d;
+    /*background-color: #df1f2d;*/
     font-family: "Open Sans", sans-serif;
     display: flex;
     align-items: center;
@@ -176,7 +178,7 @@
 }
 
 .flip-card {
-    margin: 20px;
+    margin: 25px;
     position: relative;
     transform-style: preserve-3d;
     perspective: 1000px;
@@ -184,11 +186,10 @@
 
 .flip-card-front,
 .flip-card-back {
-    width: 380px;
-    min-height: 400px;
+    width: 320px;
+    min-height: 320px;
     height: auto;
-    background-color: #000000;
-    /*background-image:        url(https://wallpapercave.com/wp/wp3842313.jpg);*/
+    background-image: url(cardCategory/1.png);
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -199,12 +200,22 @@
 
 .flip-card:nth-of-type(2) .flip-card-front,
 .flip-card:nth-of-type(2) .flip-card-back {
-    /*background-image: url(https://wallpapercave.com/wp/wp5049551.jpg);*/
+    background-image: url(cardCategory/2.png);
 }
 
 .flip-card:nth-of-type(3) .flip-card-front,
 .flip-card:nth-of-type(3) .flip-card-back {
-    /*background-image: url(https://wallpapercave.com/wp/wp7907920.jpg);*/
+    background-image: url(cardCategory/4.png);
+}
+
+.flip-card:nth-of-type(4) .flip-card-front,
+.flip-card:nth-of-type(4) .flip-card-back {
+    background-image: url(cardCategory/3.png);
+}
+
+.flip-card:nth-of-type(5) .flip-card-front,
+.flip-card:nth-of-type(5) .flip-card-back {
+    background-image: url(cardCategory/5.png);
 }
 
 .flip-card-front {
@@ -223,7 +234,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #0a0a0a;
+    /*background-color: #0a0a0a;*/
     position: absolute;
     top: 0;
     left: 0;
@@ -251,9 +262,7 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 40px;
-    text-transform: capitalize;
 }
-
 .inner p {
     color: #ffffff;
     font-size: 16px;
@@ -304,4 +313,389 @@
     margin-bottom: 30px;
     background-color: #f7f7f7;
     border: 1px solid #ddd;
+}
+
+
+
+
+
+.marquee-infinite {
+    margin: 30px auto;
+    background: #fff;
+    padding: 20px 0;
+    /*border: 1px solid #000;*/
+    /*max-width: 60%;*/
+    overflow: hidden;
+}
+
+/*Здесь можно поиграть со свойством width: mac-content*/
+.marquee-infinite div {
+    display: flex;
+    width: 150%;
+    animation: marquee-infinite 10s linear infinite;
+}
+
+.marquee-infinite h1 {
+    white-space: nowrap;
+    width: 100%;
+}
+
+.marquee-infinite span {
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+    background-size: 100%;
+}
+
+.marquee-infinite img {
+    background-size: 100%;
+}
+
+.marquee-infinite:hover div {
+    animation-play-state: paused;
+}
+
+
+@keyframes marquee-text {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-150%);
+    }
+}
+
+@keyframes marquee-infinite {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.text-pink{
+    color: #F03C60;
+}
+
+.text-blue{
+    color: #459CF2;
+}
+.text-green{
+    color: #A0E061;
+}
+.text-yellow{
+    color: #FFDB4C;
+}
+.text-purple{
+    color: #5F49FA;
+}
+.card-category-btn a{
+    text-decoration: none;
+
+}
+.card-category-btn{
+    width: 50%;
+    background: #fff;
+    border-radius: 20px;
+}
+
+.text-orange{
+    color: #F0773EFF;
+}
+
+.main {
+    height: 100vh;
+    width: 100%;
+    margin-bottom: -10vh;
+}
+.wrapper,
+.slide {
+    position: relative;
+    width: 100%;
+    height: 95%;
+}
+.slide {
+    overflow: hidden;
+}
+.slide::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    /*background-color: rgba(0, 0, 0, 0.4);*/
+    z-index: 10;
+}
+.slide .image {
+    background-size: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.slide .image-data {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    /*width: 50%;*/
+    z-index: 100;
+}
+.image-data span.text {
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+}
+.image-data h2 {
+    font-size: 45px;
+    font-weight: 600;
+    /*color: #fff;*/
+}
+a.button {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 25px;
+    color: #333;
+    background: #fff;
+    text-decoration: none;
+    margin-top: 25px;
+    transition: all 0.3s ease;
+}
+a.button:hover {
+    color: #fff;
+    background-color: #c87e4f;
+}
+
+/* swiper button css */
+.nav-btn {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.3);
+}
+.nav-btn:hover {
+    background: rgba(255, 255, 255, 0.4);
+}
+/*.swiper-button-next {*/
+/*    right: 50px;*/
+/*}*/
+/*.swiper-button-prev {*/
+/*    left: 50px;*/
+/*}*/
+.nav-btn::before,
+.nav-btn::after {
+    font-size: 25px;
+    color: #fff;
+}
+.swiper-pagination-bullet {
+    opacity: 1;
+    height: 12px;
+    width: 12px;
+    background-color: #fff;
+    visibility: hidden;
+}
+.swiper-pagination-bullet-active {
+    border: 2px solid #fff;
+    background-color: #c87e4f;
+}
+
+@media screen and (max-width: 768px) {
+    .nav-btn {
+        visibility: hidden;
+    }
+    .swiper-pagination-bullet {
+        visibility: visible;
+    }
+}
+
+.banner-btn{
+    max-width: 50vw;
+    /*border-radius: 30px;*/
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.banner-btn1{
+    border-radius: 30px;
+    height: 54px;
+    width: 207px;
+    background: #F0773EFF;
+    font-size: 18px;
+    color: #fff
+}
+
+.banner-btn2{
+    border-radius: 30px;
+    height: 54px;
+    width: 262px;
+    font-size: 18px;
+    /*border: 1.5px solid #F0773EFF;*/
+    background: #F5F4EF;
+    color: #F0773EFF;
+}
+
+.why-count{
+    background: #F0773E;
+    padding-bottom: 45px;
+    padding-top: 45px;
+    box-sizing: border-box;
+}
+.why-count h2{
+    font-size: 44px;
+    margin-top: 50px;
+    margin-bottom: -30px;
+    color: #fff;
+}
+.why-count h5{
+    font-size: 22px;
+}
+.why-count p{
+    font-size: 16px;
+}
+.why-card{
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    height: 400px;
+}
+.card-category{
+    border-radius: 30px;
+    border: none;
+    background: none;
+}
+.card-category p{
+    font-size: 14px;
+}
+.card-category h5{
+    font-size: 20px;
+    color: #F0773EFF;
+}
+
+.card-button-popular{
+    width: 100%;
+    border: 2px solid #F0773EFF;
+    border-radius: 30px;
+    height: 40px;
+    font-size: 16px;
+    color: #F0773EFF;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #fff;
+}
+.card-body-popular{
+    padding: 1.5rem 1.5rem;
+    background: #fff;
+    border-radius: 0 0 30px 30px;
+}
+.collect{
+    background-image: url("collect.png");
+    /*background-size: 100%;*/
+    /*width: 100%;*/
+    height: 468px;
+}
+
+
+
+.cont {
+    /*padding: 0;*/
+    position: relative;
+}
+.cont-img {
+    width: 100vw;
+    height: auto;
+}
+.cont-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    /*font-weight: bold;*/
+    text-align: center;
+    color: #fff;
+}
+.cont-text h2{
+    font-size: 44px;
+}
+.cont-text h1{
+    font-size: 70px;
+}
+
+@media screen and (max-width: 768px) {
+    .text {
+        font-size: 16px;
+    }
+}
+
+.result{
+    background: #F0773EFF;
+    padding: 20px;
+}
+
+.result-card{
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    /*height: 250px;*/
+    font-size: 16px;
+    background: none;
+    color: #fff;
+}
+
+footer{
+    background: #F0773EFF;
+    color: #fff;
+    margin-left: 10px;
+}
+footer a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
+header{
+    height: 56px;
+}
+
+.content {
+    height: calc(100vh - 112px);
+}
+
+.animation1{
+    animation-delay: 0.25s;
+}
+.animation2{
+    animation-delay: 0.5s;
+}
+.animation3{
+    animation-delay: 0.75s;
+}
+.animation4{
+    animation-delay: 1s;
+}
+.animation5{
+     animation-delay: 1.25s;
+ }
+.animation6{
+    animation-delay: 1.5s;
+}
+.animation7{
+    animation-delay: 2s;
+}
+.animation8{
+    animation-delay: 2.25s;
+}
+.animation9{
+    animation-delay: 2.5s;
+}
+.animation10{
+    animation-delay: 2.25s;
+}
+
+.animaionScore{
+    animation-duration: 1s;
+}
+
+.otstup{
+    height: 100px;
 }
